--- a/requirements.txt
+++ b/requirements.txt
@@ -5,14 +5,13 @@ PIL==1.1.7
 South==0.7.6
 argparse==1.2.1
 cmsplugin-contact==1.0.0
-cmsplugin-zinnia==0.4
 distribute==0.6.34
-django-blog-zinnia==0.12.1
 django-classy-tags==0.4
 django-cms==2.3.5
 django-mptt==0.5.2
 django-sekizai==0.7
 django-tagging==0.3.1
+django-tinymce==1.5.1b4
 django-xmlrpc==0.1.4
 html5lib==0.95
 ipdb==0.7
@@ -21,3 +20,4 @@ pyparsing==1.5.6
 pytz==2012j
 raven==3.1.4
 wsgiref==0.1.2
+yolk==0.4.3
